--- a/src/app/@core/auth/login-form/login-form.component.html
+++ b/src/app/@core/auth/login-form/login-form.component.html
@@ -13,36 +13,26 @@
         <mat-form-field class="full-width">
           <input
             matInput
+            placeholder="Usuario"
             type="text"
             floatPlaceholder="true"
             formControlName="username"
           />
-          <mat-form-field>
-            <mat-icon>account_box</mat-icon>
-            <i> Usuario</i>
-          </mat-form-field>
+          <mat-icon matSuffix>account_box</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="full-width">
           <input
             matInput
-            type="password"
-            floatPlaceholder="true"
-            formControlName="password"
+            placeholder="Contraseña"
             [type]="hide ? 'password' : 'text'"
+            formControlName="password"
+            required
           />
-          <mat-form-field>
-            <!-- <mat-placeholder></mat-placeholder> -->
-            <mat-icon>lock</mat-icon>
-            <i> Contraseña</i>
-          </mat-form-field>
-          <mat-icon
-            matSuffix
-            class="pointer"
-            color="primary"
-            (click)="hide = !hide"
-            >{{ hide ? "visibility" : "visibility_off" }}</mat-icon
-          >
+          <mat-icon matSuffix (click)="hide = !hide">{{
+            hide ? "visibility_off" : "visibility"
+          }}</mat-icon>
+
         </mat-form-field>
       </mat-card-content>
 
