--- a/src/app/pages/tramite-documentario/detalle-adjuntar-interno/detalle-adjuntar-interno.component.html
+++ b/src/app/pages/tramite-documentario/detalle-adjuntar-interno/detalle-adjuntar-interno.component.html
@@ -18,10 +18,11 @@
         placeholder="Ingrese Título..."
         formControlName="titulo"/>
     </mat-form-field>
-    <div class="mensaje_documento"
-         *ngIf="titulo!.errors!['maxlength']">
-          <mat-icon>report</mat-icon>
-          No es posible cargar el archivo, máximo 110 caracteres en el título
+    <div *ngIf="titulo?.value">
+      <div class="mensaje_documento" *ngIf="titulo?.errors">
+        <mat-icon>report</mat-icon>
+        No es posible cargar el archivo, máximo 110 caracteres en el título
+      </div>
     </div>
 
     <mat-form-field appearance="outline" color="primary">
