--- a/src/app/pages/tramite-documentario/detalle-sielse-guardar/detalle-sielse-guardar.component.scss
+++ b/src/app/pages/tramite-documentario/detalle-sielse-guardar/detalle-sielse-guardar.component.scss
@@ -1,47 +1,49 @@
-.espacio{
-    margin-right: 16px;
+mat-card {
+  padding: 20px 10px 10px 10px;
+  margin: 30px;
 }
-.contenido{
-    font-size: 12px;
-    font-weight: bold;
-  
+.espacio {
+  margin-right: 16px;
 }
-.titulo{
-    font: size 16px;
-    font-weight: bold;
-    // font-style: italic;
-    color: #1a405a
+.contenido {
+  font-size: 12px;
+  font-weight: bold;
 }
-
-.subtitulo{
-    font-weight: bold;
-    font-size: 12px;
-    font-style: italic;
-    color: #1a405a
+.titulo {
+  font: size 16px;
+  font-weight: bold;
+  // font-style: italic;
+  color: #1a405a;
 }
 
-.mat-icon{
-    color: #1a405a
+.subtitulo {
+  font-weight: bold;
+  font-size: 12px;
+  font-style: italic;
+  color: #1a405a;
+}
+
+.mat-icon {
+  color: #1a405a;
 }
 
 .atendido {
-    font-weight: bold;
-    font-size: 12px;
-    font-style: italic;
-    color: #e69605 !important; 
-
-  }
- .lectura {
-    font-weight: bold;
-    font-size: 12px;
-    font-style: italic;
-    color: #92412d !important;
- }
- .circle-btn {
-    border: none;
-    padding: 12px 34px;
-    background: url('../../../../assets/logito.png') no-repeat;
-  }
-  .mat-icon{
-      color: white;
-  }
+  font-weight: bold;
+  font-size: 12px;
+  font-style: italic;
+  color: #e69605 !important;
+}
+.lectura {
+  font-weight: bold;
+  font-size: 12px;
+  font-style: italic;
+  color: #92412d !important;
+}
+.circle-btn {
+  border: none;
+  padding: 12px 34px;
+  background: url("../../../../assets/logito.png") no-repeat;
+}
+.mat-icon {
+  color: white;
+}
