--- a/src/app/pages/tramite-documentario/reporte-grafico/reporte-grafico.component.scss
+++ b/src/app/pages/tramite-documentario/reporte-grafico/reporte-grafico.component.scss
@@ -1,6 +1,13 @@
 /*.graph .panning-rect{
   cursor: default;
 }*/
+mat-card {
+  padding: 10px;
+  margin: 5px;
+}
+mat-slide-toggle{
+  padding: 10px;
+}
 .graph .edge{
   cursor: pointer;
 }
