--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -36,7 +36,7 @@
 // $padding__sidenav-item__level4: 30px;
 // $padding__sidenav-item__level5: 40px;
 // $padding__sidenav-item__level6: 40px;
-
+$color-primary: white !important;
 $width__sidenav: 250px;
 
 $padding-left-right__sidenav-list__mat-list-item: 24px;
