--- a/src/app/pages/tramite-documentario/documento-atencion/documento-atencion.component.scss
+++ b/src/app/pages/tramite-documentario/documento-atencion/documento-atencion.component.scss
@@ -1,35 +1,35 @@
 .mat-cell {
   font-size: 11px;
 }
-div{
+div {
   font-size: 12px;
-
 }
-span{
+span {
   font-weight: bold;
 }
 
-.izquierda{
-  float:left
+.izquierda {
+  float: left;
 }
- .derecha{
- float:right;
- padding-right:10px;
- }
+.derecha {
+  float: right;
+  padding-right: 10px;
+}
 
- .clearfix{
-   font-weight: bold;
-   font-size: 10px;
- }
+.clearfix {
+  font-weight: bold;
+  font-size: 10px;
+}
 
- .izquierda>p,.derecha>p{
-  margin:0;
-  padding:0;
-  }
+.izquierda > p,
+.derecha > p {
+  margin: 0;
+  padding: 0;
+}
 // .titulo{
 //   font-family: "segoe UI";
 // }
-.mat-column-fechaDerivacion{
+.mat-column-fechaDerivacion {
   justify-content: center;
   text-align: center;
 }
@@ -50,18 +50,18 @@ span{
 //   .mat-header-cell{
 //     justify-content: center;
 //   }
-  .P{
-    color: #0b643a !important;
-  }
-  .C{
-    color: #185175 !important;
-  }
-  .A{
-    color: #905835 !important;
-  }
-  .F{
-    color: #e69605 !important;
-  }
+.P {
+  color: #0b643a !important;
+}
+.C {
+  color: #185175 !important;
+}
+.A {
+  color: #905835 !important;
+}
+.F {
+  color: #e69605 !important;
+}
 
 .mat-column-nombreUsuarioDestino {
   word-wrap: break-word !important;
@@ -121,7 +121,7 @@ li span {
   width: 25px;
   border-radius: 50%;
   border: none;
-  background: url('../../../../assets/logito.png') no-repeat;
+  background: url("../../../../assets/logito.png") no-repeat;
   background-size: cover;
   cursor: pointer;
 }
@@ -130,3 +130,4 @@ li span {
   border-color: transparent !important;
   outline: none;
 }
+
