--- a/src/app/pages/tramite-documentario/reporte-vb/reporte-vb.component.scss
+++ b/src/app/pages/tramite-documentario/reporte-vb/reporte-vb.component.scss
@@ -4,9 +4,13 @@
 .boton{
     align-self: center;
 }
+mat-card {
+  padding: 15px;
+  margin: 5px;
+}
 // .longitud{
 //      width: 458px;
-//     //  display: box; 
-//      grid-template-columns: 1fr 1fr; 
-//      gap: 5px 
+//     //  display: box;
+//      grid-template-columns: 1fr 1fr;
+//      gap: 5px
 // }
