--- a/src/app/@core/side-nav/sidenav.component.scss
+++ b/src/app/@core/side-nav/sidenav.component.scss
@@ -1,11 +1,5 @@
 @import "../../../scss/var";
 
-ngx-sidenav mat-toolbar.mat-toolbar.sidenav-toolbar {
-  span {
-    color: white !important;
-  }
-}
-
 mat-toolbar.mat-toolbar.sidenav-toolbar {
   // background: $background-color__sidenav-toolbar;
   padding: 0 14px 0 24px;
@@ -44,22 +38,18 @@ mat-sidenav {
 }
 
 @keyframes fadein {
-  0% {
-    opacity: 0;
-  }
 
-  100% {
-    opacity: 1;
-  }
 }
 
 @keyframes fadeout {
   0% {
+    color: green;
     opacity: 1;
   }
 
   100% {
-    opacity: 0;
+    color: white;
+    // opacity: 0;
   }
 }
 
@@ -96,6 +86,7 @@ mat-sidenav {
     &.collapsed {
       //max-width: $max-width__icon-sidenav; // Padding width + icon width
       //min-width: $max-width__icon-sidenav;
+
       .fade-in-on-icon-sidenav {
         //noinspection CssInvalidPropertyValue
         animation: 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1
