--- a/src/app/pages/tramite-documentario/seguimiento-filtro/seguimiento-filtro.component.scss
+++ b/src/app/pages/tramite-documentario/seguimiento-filtro/seguimiento-filtro.component.scss
@@ -3,7 +3,11 @@
 }
 .longitud{
      width: 458px;
-    //  display: box; 
-     grid-template-columns: 1fr 1fr; 
-     gap: 5px 
+    //  display: box;
+     grid-template-columns: 1fr 1fr;
+     gap: 5px
+}
+mat-card {
+  padding: 15px;
+  margin: 5px;
 }
