--- a/src/app/pages/tramite-documentario/reporte-vb-detalle/reporte-vb-detalle.component.scss
+++ b/src/app/pages/tramite-documentario/reporte-vb-detalle/reporte-vb-detalle.component.scss
@@ -7,6 +7,7 @@
 }
 .mat-mdc-table {
   white-space: nowrap !important;
+  height: 500px;
 }
 .mat-column-codigoDocumentoInterno {
   word-wrap: break-word !important;
