--- a/src/app/pages/tramite-documentario/documento-interno-datos/documento-interno-datos.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-datos/documento-interno-datos.component.html
@@ -18,7 +18,9 @@
   >
     Principal Interesado :{{ doc.remitente }}
   </div>
-  <span class="fs-16 fw-500 mg-bot-8">Datos Documento Interno</span>
+  <div style="padding: 5px 0 20px 0">
+    <span class="fs-16 fw-500 mg-bot-8">Datos Documento Interno</span>
+  </div>
   <row-container>
     <mat-form-field
       fxFlex="25"
