--- a/src/app/pages/tramite-documentario/documento-interno-reportes/documento-interno-reportes.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-reportes/documento-interno-reportes.component.html
@@ -7,7 +7,9 @@
     fxLayoutAlign.xs="start"
   >
     <div fxFlex="100">
-      <span class="fs-16 fw-500 mg-bot-8">Filtro del Documento</span>
+      <div style="padding-top: 20px">
+        <span class="fs-16 fw-500 mg-bot-8">Filtro del Documento</span>
+      </div>
       <div class="bloque">
         <row-container>
           <two-picker
