--- a/src/app/pages/tramite-documentario/reporte-grafico/reporte-grafico.component.html
+++ b/src/app/pages/tramite-documentario/reporte-grafico/reporte-grafico.component.html
@@ -15,6 +15,7 @@
       [panningEnabled]="estadoMover"
       [enableZoom]="estadoZoom"
       [draggingEnabled]="estadoNodos"
+      [autoCenter]="true"
     >
       <ng-template #defsTemplate>
         <svg:marker
