--- a/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
+++ b/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
@@ -1,4 +1,6 @@
-<span class="fs-16 fw-500 mg-bot-8">Datos del Ingreso</span>
+<div style="padding: 5px 0 20px 0">
+  <span s class="fs-16 fw-500 mg-bot-8">Datos del Ingreso</span>
+</div>
 <row-container>
   <mat-form-field
     fxFlex="18"
@@ -144,7 +146,11 @@
     color="primary"
   >
     <mat-label>Recibido el</mat-label>
-    <input matInput readonly value="{{doc.fechaRecepcion | date:'dd/MM/yy HH:mm':'GMT':'en-GB'}}" />
+    <input
+      matInput
+      readonly
+      value="{{doc.fechaRecepcion | date:'dd/MM/yy HH:mm':'GMT':'en-GB'}}"
+    />
   </mat-form-field>
 
   <mat-form-field
