fix styles mat-mdc-text-field-wrapper

--- a/src/scss/themes/black-theme.scss
+++ b/src/scss/themes/black-theme.scss
@@ -11,3 +11,19 @@ $app-black-theme: mat.define-dark-theme(
     ),
   )
 );
+
+.mat-mdc-text-field-wrapper {
+  height: 50px !important;
+  display: flex !important;
+  align-items: center !important;
+  flex: none !important;
+}
+
+.mat-mdc-form-field-flex {
+  display: flex !important;
+  align-items: center !important;
+}
+
+.sidenav-list > ngx-sidenav-item .estilos {
+  height: 43px !important;
+}
