--- a/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
+++ b/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
@@ -48,7 +48,7 @@
     <ng-container matColumnDef="accion">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let e">
-        <div>
+        <div [style]="{'display':'flex','justify-content':'space-between'}">
           <button
             mat-icon-button
             matTooltip="Descargar"
@@ -346,7 +346,7 @@
   <ng-container matColumnDef="accion">
     <th mat-header-cell *matHeaderCellDef>Acciones</th>
     <td mat-cell *matCellDef="let e">
-      <div style="display: flex">
+      <div [style]="{'display':'flex','justify-content':'space-between'}">
         <button
           mat-icon-button
           matTooltip="Descargar"
