--- a/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
+++ b/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
@@ -149,7 +149,7 @@
     <input
       matInput
       readonly
-      value="{{doc.fechaRecepcion | date:'dd/MM/yy HH:mm':'GMT':'en-GB'}}"
+      value="{{doc.fechaRecepcion}}"
     />
   </mat-form-field>
 
