--- a/src/scss/themes/light-theme.scss
+++ b/src/scss/themes/light-theme.scss
@@ -13,7 +13,7 @@ $app-light-theme: mat.define-light-theme(
 );
 
 .mat-mdc-text-field-wrapper {
-  height: 50px !important;
+  // height: 50px !important;
   display: flex !important;
   align-items: center !important;
   flex: none !important;
