--- a/src/app/pages/tramite-documentario/documento-adjuntar/documento-adjuntar.component.html
+++ b/src/app/pages/tramite-documentario/documento-adjuntar/documento-adjuntar.component.html
@@ -17,6 +17,7 @@
 <mat-hint>Extensiones permitidas "Pdf,Word,Excel,zip,rar"</mat-hint>
 <p class="titulos_adjuntos">Adjuntos Respuestas</p>
 <table
+  class="table-bordered"
   mat-table
   class="wd-100"
   #respuesta
@@ -44,7 +45,7 @@
   <ng-container matColumnDef="accion">
     <th mat-header-cell *matHeaderCellDef>Acciones</th>
     <td mat-cell *matCellDef="let e">
-      <div [style]="{'display':'flex','justify-content':'space-between'}">
+      <div [style]="{ display: 'flex', 'justify-content': 'space-between' }">
         <!-- <button mat-icon-button
                 matTooltip="Descargar"
                 color="primary"
@@ -110,6 +111,7 @@
 </table>
 <p class="titulos_adjuntos">Adjuntos Iniciales</p>
 <table
+  class="table-bordered"
   mat-table
   class="wd-100"
   #iniciales
@@ -137,7 +139,7 @@
   <ng-container matColumnDef="accion">
     <th mat-header-cell *matHeaderCellDef>Acciones</th>
     <td mat-cell *matCellDef="let e">
-      <div  [style]="{'display':'flex','justify-content':'space-between'}">
+      <div [style]="{ display: 'flex', 'justify-content': 'space-between' }">
         <button
           mat-icon-button
           matTooltip="Descargar"
