--- a/src/scss/themes/black-theme.scss
+++ b/src/scss/themes/black-theme.scss
@@ -11,9 +11,12 @@ $app-black-theme: mat.define-dark-theme(
     ),
   )
 );
+::ng-deep .mat-mdc-form-field {
+  height: 50px !important;
+}
 
 .mat-mdc-text-field-wrapper {
-  height: 50px !important;
+  // height: 50px !important;
   display: flex !important;
   align-items: center !important;
   flex: none !important;
