--- a/src/scss/themes/elements/form-field-theme.scss
+++ b/src/scss/themes/elements/form-field-theme.scss
@@ -11,7 +11,7 @@
   .mat-form-field-appearance-outline {
 
     // padding: 0.5em 0 0.5em 0;
-    .mat-form-field-wrapper {
+    .mat-mdc-text-field-wrapper {
       padding-bottom: 0;
     }
 
